--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Youtube.com Clone</title>
     <link rel="icon" href="channels/download.jpg">
-
+     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
